feature: applies API health
